--- a/.github/workflows/Clone.yml
+++ b/.github/workflows/Clone.yml
@@ -16,5 +16,5 @@ jobs:
           script: |
             cd ..
             cd pub/
-            git clone git@github.com:KofiOwusuMensah/KofiOwusuMensah.github.io.git
+            git clone https://github.com/KofiOwusuMensah/KofiOwusuMensah.github.io.git
             
