--- a/.github/workflows/Clone.yml
+++ b/.github/workflows/Clone.yml
@@ -14,7 +14,6 @@ jobs:
           password: ${{secrets.PASSWORD}}
           port: ${{secrets.PORT}}
           script: |
-            cd ..
-            cd pub/
+            cd ../pub
             git clone https://github.com/KofiOwusuMensah/KofiOwusuMensah.github.io.git
             
