--- a/.github/workflows/Delete.yml
+++ b/.github/workflows/Delete.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
 jobs:
   job_one:
-    name: Clean
+    name: Delete
     runs-on: ubuntu-latest
     steps:
       - name: testing
